--- a/.buildkite/project.json
+++ b/.buildkite/project.json
@@ -5,6 +5,8 @@
       "type": "script",
       "name": ":pipeline:",
       "command": ".buildkite/pipeline.sh | buildkite-agent pipeline upload"
+      "agents":
+        - "queue=default"
     }
   ]
 }
